Improve pie-clearfix to avoid margin-collapsing. See j.mp/bestclearfix for details.

--- a/stylesheets/_clearfix.scss
+++ b/stylesheets/_clearfix.scss
@@ -17,12 +17,12 @@
 @mixin pie-clearfix {
   @include has-layout;
 
-  &:after {
-    content: " ";
+  &:before, &:after {
+    content: "\0020";
     display: block;
     height: 0;
-    clear: both;
-    overflow: hidden;
     visibility: hidden;
   }
+
+  &:after { clear: both; }
 }
